# auryn

./: .gitignore  CMakeLists.txt  README.md  conda_requirements.txt  erbp_utils  requirements.txt  setup.py
experiments/: CMakeLists.txt  exp_rbp.cpp  exp_rbp_cnn.cpp  exp_rbp_dual.cpp  exp_rbp_dual_rr.cpp  exp_rbp_flash.cpp  exp_rbp_online.cpp  test_erbp_conv2d.cpp
src/: auryn.h
src/auryn/: Connection.cpp  Connection.h  FileInputGroup.cpp  LinGroup.cpp  LinGroup.h  NeuronGroup.cpp  PairInteractionConnection.cpp  PatternMonitor.cpp  PatternStimulator.cpp  PatternStimulator.h  PoissonStimulator.cpp  PoissonStimulator.h  SIFGroup.cpp  SIFGroup.h  SRM0Group.cpp  SRM0Group.h  SparseConnection.cpp  SpikingGroup.h  System.h  WeightMonitor.cpp  auryn_definitions.h  modulatedVmPlasticConnection.cpp  modulatedVmPlasticConnection.h  peRBPConnection.cpp  peRBPConnection.h  peRBPConnectionRR.cpp  peRBPConnectionRR.h  peRBPSharedConnection.cpp  peRBPSharedConnection.h
